...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchProgressBar" />

    <TextView
        android:id="@+id/incomingHelpersNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
...
            android:layout_marginStart="16dp"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/white"
            android:orientation="vertical">

            <ImageButton
                    android:id="@+id/heart_attack_tuto_button"
                    android:layout_width="@dimen/image_button_tuto_page"
                    android:layout_height="@dimen/image_button_tuto_page"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_image_inside_layout"
                    android:background="@drawable/heart_attack"
                    android:contentDescription="@string/heart_attack_tuto_button"
...
                android:background="@drawable/round_style"
                android:backgroundTint="@color/white"
                android:orientation="vertical">


            <ImageButton
                    android:id="@+id/epipen_tuto_button"
                    android:layout_width="@dimen/image_button_tuto_page"
                    android:layout_height="@dimen/image_button_tuto_page"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_image_inside_layout"
                    android:background="@drawable/epipen"
                    android:contentDescription="@string/allergies_tuto_button"
...
            android:layout_marginStart="14dp"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/white"
            android:orientation="vertical">

            <ImageButton
                    android:id="@+id/aed_tuto_button"
                    android:layout_width="@dimen/image_button_tuto_page"
                    android:layout_height="@dimen/image_button_tuto_page"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_image_inside_layout"
                    android:background="@drawable/defibrillator"
                    android:contentDescription="@string/defibrillator_tuto_button"
...
            android:layout_width="213dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/await_help_call_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/phone_icon_description"
                android:foregroundGravity="center"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
                android:id="@+id/cancel_search_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/cancel_button_description"
                android:onClick="cancelHelpSearch"
                app:layout_constraintBottom_toBottomOf="parent"
...
