...
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/mid_light_grey"
            android:text="@string/pass"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/open_call_popup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/dark_persimmon"
            android:text="@string/call_now"
            style="?android:attr/buttonBarButtonStyle" />
...
