...

            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="20dp">
            <ImageButton
                android:id="@+id/ambulance_call_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ambulance"
                android:contentDescription="@string/ambulance_call" />

            <TextView
...
