<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BugReportActivity">

    <ImageView
        android:id="@+id/bugReportBackGround"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bug_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:contentDescription="@string/background_image_description"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bugReportConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintVertical_bias="1"
        android:background="@drawable/round_corners">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/reportTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:shadowColor="@color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="20"
                    android:text="@string/report"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reportTypeLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/category"
                    app:boxStrokeColor="@color/teal_200"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:startIconDrawable="@drawable/ic_category"
                    app:layout_constraintTop_toBottomOf="@+id/reportTitle"
                    tools:ignore="MissingConstraints">

                    <AutoCompleteTextView
                        android:id="@+id/reportCategoryDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_gender"
                        android:inputType="none"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reportTxtLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/what_must_be_changed"
                    app:boxStrokeColor="@color/teal_200"
                    app:errorIconDrawable="@drawable/ic_error"
                    app:hintTextColor="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reportTypeLayout"
                    app:startIconDrawable="@drawable/ic_idea">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reportEditTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="50" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/reportSaveButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/send_report"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reportTxtLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>